Start generating launch run configs